# paraluxflow-admin-server

./: .env.example  .gitignore  Dockerfile  README.md  firebase.json  generate_api_docs.sh  pyproject.toml  requirements.txt  wsgi.py  zeabur.json
app/: __init__.py  config.py  database_config.py  db_init.py  extensions.py
app/api/: swagger_schemas.py
app/api/jobs/: __init__.py  crawler.py  daily_summary.py  feed_sync.py  hot_topics.py  rss.py  summary_generation.py  vectorization.py
app/api/middleware/: app_key_auth.py  auth.py  client_auth.py  error_handling.py
app/api/v1/: __init__.py
app/commands/: init_hot_topic_platforms.py
app/core/: exceptions.py  logging.py  pagination.py  responses.py  security.py  status_codes.py  validation.py
app/core/constants/: article_categories.py
app/domains/auth/: __init__.py
app/domains/rss/: __init__.py
app/infrastructure/cache/: base.py  memory_cache.py  redis_cache.py
app/infrastructure/database/: base.py  session.py
app/infrastructure/llm_providers/: anthropic_provider.py  base.py  factory.py  gemini_provider.py  openai_provider.py  volcano_provider.py  volcengine_provider.py
app/infrastructure/vector_stores/: base.py  (+3 more)
app/utils/: converters.py  formatters.py  rsa_util.py  security.py  summary_generator.py  swagger_helper.py  swagger_utils.py  transaction.py  validators.py
docs/swagger/: agent.yml  api_example.py  auth.yml  crawler.yml  definitions.yml  feed.yml  llm.yml  script.yml  swagger.json
migrations/versions/: create_digest_tables.py
scripts/: generate_swagger_templates.sh  install_swagger.py
(+106 files in other folders)
