[tool.poetry]
name = "imp-server"
version = "0.1.0"
description = "Intelligent Middleware Platform"
authors = ["wadekoo"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10.10"
flask = "^2.3.0"
flask-sqlalchemy = "^3.0.0"
flask-migrate = "^4.0.0"
flask-cors = "^4.0.0"
pydantic = "^2.0.0"
redis = "^4.6.0"
pymongo = "^4.5.0"
sqlalchemy = "^2.0.0"
openai = "^1.0.0"
anthropic = "^0.3.0"
pinecone-client = "^2.2.0"
requests = "^2.31.0"
python-dotenv = "^1.0.0"
flask-jwt-extended = "^4.7.1"
pydantic-settings = "^2.8.1"
pymysql = "^1.1.1"
tiktoken = "^0.9.0"
cryptography = "^44.0.2"
PyJWT="2.7.0"
volcengine-python-sdk = "^1.0.130"
httpx = "^0.28.1"
bs4 = "^0.0.2"

[tool.poetry.group.dev.dependencies]
black = "^23.0.0"
isort = "^5.12.0"
flake8 = "^6.0.0"
mypy = "^1.3.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 88
include = '\.pyi?$'

[tool.isort]
profile = "black"
line_length = 88

[tool.mypy]
python_version = "3.8"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
